vendor/bifrost/tls/bindings/err.odin


// ERR_TXT_* are provided for compatibility with code that assumes that it's
// using OpenSSL.
ERR_TXT_STRING   :: ERR_FLAG_STRING
ERR_TXT_MALLOCED :: ERR_FLAG_MALLOCED

@(default_calling_convention="c")
foreign lib {
	// ERR_clear_system_error clears the system's error value (i.e. errno).
	ERR_clear_system_error :: proc() ---

	// ERR_put_error adds an error to the error queue, dropping the least recent
	// error if necessary for space reasons.
	ERR_put_error :: proc(library: i32, unused: i32, reason: i32, file: cstring, line: u32) ---

	// ERR_add_error_data takes a variable number (|count|) of const char*
	// pointers, concatenates them and sets the result as the data on the most
	// recent error.
	ERR_add_error_data :: proc(count: u32, #c_vararg _: ..any) ---

	// ERR_add_error_dataf takes a printf-style format and arguments, and sets the
	// result as the data on the most recent error.
	ERR_add_error_dataf :: proc(format: cstring, #c_vararg _: ..any) ---

	// ERR_set_error_data sets the data on the most recent error to |data|, which
	// must be a NUL-terminated string. |flags| must contain |ERR_FLAG_STRING|. If
	// |flags| contains |ERR_FLAG_MALLOCED|, this function takes ownership of
	// |data|, which must have been allocated with |OPENSSL_malloc|. Otherwise, it
	// saves a copy of |data|.
	//
	// Note this differs from OpenSSL which, when |ERR_FLAG_MALLOCED| is unset,
	// saves the pointer as-is and requires it remain valid for the lifetime of the
	// address space.
	ERR_set_error_data :: proc(data: cstring, flags: i32) ---
}

// ERR_NUM_ERRORS is one more than the limit of the number of errors in the
// queue.
ERR_NUM_ERRORS :: 16

